--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
         html {
           background-color: #fff;
         }
-      }      
+      }
 
       h1 {
         font-size: 1rem;
         font-weight: 600;
-        margin: 4rem 0;
+        margin: 4rem 0 3rem 0;
       }
 
       body {
@@ -53,7 +53,6 @@
         row-gap: 2rem;
         font-size: 0.8rem;
         font-weight: 400;
-        margin: 2rem 0;
       }
 
       .cv h3 {
@@ -90,7 +89,9 @@
         </ul>
         <h3>Career</h3>
         <ul>
-          <li><a href="https://www.5monkeys.se/">5 Monkeys Agency</a> (2021–2024)</li>
+          <li>
+            <a href="https://www.5monkeys.se/">5 Monkeys Agency</a> (2021–2024)
+          </li>
           <li><a href="https://www.vaja.net/">Vaja</a> (2024–)</li>
         </ul>
         <h3>Languages</h3>
@@ -103,16 +104,23 @@
         <ul>
           <li>Class B driving license (automatic only)</li>
           <li>Deutsches Sprachdiplom I & II</li>
-          <li>Bronze medal, <a href="https://eoes.se/resultat/">European Olympiad of Experimental Science</a> (2022)</li>
-          <li>Bronze medal, <a href="https://nbpho.ee/">Nordic–Baltic Physics Olympiad</a> (2024)</li>
+          <li>
+            Bronze medal,
+            <a href="https://eoes.se/resultat/"
+              >European Olympiad of Experimental Science</a
+            >
+            (2022)
+          </li>
+          <li>
+            Bronze medal,
+            <a href="https://nbpho.ee/">Nordic–Baltic Physics Olympiad</a>
+            (2024)
+          </li>
         </ul>
         <h3>Links</h3>
         <ul>
           <li><a href="https://github.com/akeamc/">Github</a></li>
-        </ul>
-        <h3>Keywords</h3>
-        <ul>
-          <li></li>
+          <li><a href="https://www.linkedin.com/in/%C3%A5ke/">Linkedin</a></li>
         </ul>
       </section>
     </main>
