--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,14 @@
     <style type="text/css">
       :root {
         font-family: Inter, sans-serif;
-        font-feature-settings: "liga" 1, "calt" 1; /* fix for Chrome */
+        font-feature-settings:
+          "liga" 1, "calt" 1, /* fix for Chrome */
+          "cv10";
       }
 
       @supports (font-variation-settings: normal) {
         :root {
           font-family: InterVariable, sans-serif;
-        }
       }
 
       html {
@@ -33,7 +34,8 @@
       h1 {
         font-size: 1rem;
         font-weight: 600;
-        margin: 4rem 0 3rem 0;
+        margin: 0;
+        color: black;
       }
 
       body {
@@ -44,6 +46,16 @@
       main {
         max-width: 40rem;
         margin: 0 auto;
+      }
+
+      main > hgroup {
+        margin: 4rem 0 3rem 0;
+      }
+
+      .ipa {
+        color: #5a5853;
+        margin-top: 0.25rem;
+        font-size: 90%;
       }
 
       .cv {
@@ -80,7 +92,10 @@
   </head>
   <body>
     <main>
-      <h1>Åke Amcoff</h1>
+      <hgroup>
+        <h1>Åke Amcoff</h1>
+        <div class="ipa">[ˈoː.kɛ]</div>
+      </hgroup>
       <section class="cv">
         <h3>Education</h3>
         <ul>
@@ -102,7 +117,7 @@
         </ul>
         <h3>Diplomas etc.</h3>
         <ul>
-          <li>Class B driving license (automatic only)</li>
+          <li>Driving license (class B, automatic only)</li>
           <li>Deutsches Sprachdiplom I & II</li>
           <li>
             Bronze medal,
@@ -117,8 +132,9 @@
             (2024)
           </li>
         </ul>
-        <h3>Links</h3>
+        <h3>Contact</h3>
         <ul>
+          <li><a href="mailto:ake@amcoff.net">ake@amcoff.net</a></li>
           <li><a href="https://github.com/akeamc/">Github</a></li>
           <li><a href="https://www.linkedin.com/in/%C3%A5ke/">Linkedin</a></li>
         </ul>
