--- a/src/index.html
+++ b/src/index.html
@@ -32,15 +32,16 @@
       }
 
       h1 {
-        font-size: 1rem;
+        font-size: 2rem;
         font-weight: 600;
         margin: 0;
         color: black;
+        letter-spacing: -0.022em;
       }
 
       body {
         margin: 0;
-        padding: 1rem;
+        padding: 0 1rem;
       }
 
       main {
@@ -49,7 +50,7 @@
       }
 
       main > hgroup {
-        margin: 4rem 0 3rem 0;
+        margin: 6rem 0 4rem 0;
       }
 
       .ipa {
@@ -62,18 +63,20 @@
         display: grid;
         grid-template-columns: 1fr 2fr;
         column-gap: 1rem;
-        row-gap: 2rem;
+        row-gap: 4rem;
         font-size: 0.8rem;
         font-weight: 400;
       }
 
       .cv h3 {
         font: inherit;
+        margin: 0;
       }
 
       .cv ul {
         list-style-type: none;
         padding: 0;
+        margin: 0;
       }
 
       .cv ul li:not(:last-child) {
