add spotify support

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
     <style type="text/css">
       :root {
         font-family: Inter, sans-serif;
-        font-feature-settings:
-          "liga" 1, "calt" 1, /* fix for Chrome */
-          "cv10";
+        font-feature-settings: "liga" 1, "calt" 1, /* fix for Chrome */ "cv10";
       }
 
       @supports (font-variation-settings: normal) {
         :root {
           font-family: InterVariable, sans-serif;
+        }
       }
 
       html {
