--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,13 @@
       main {
         max-width: 40rem;
         margin: 0 auto;
-      }
-
-      main > hgroup {
-        margin: 6rem 0 4rem 0;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 2rem;
       }
 
       .ipa {
@@ -58,37 +61,26 @@
         font-size: 90%;
       }
 
-      .cv {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        column-gap: 1rem;
-        row-gap: 4rem;
-        font-size: 0.8rem;
-        font-weight: 400;
-      }
-
-      .cv h3 {
-        font: inherit;
-        margin: 0;
-      }
-
-      .cv ul {
+      .links {
         list-style-type: none;
         padding: 0;
         margin: 0;
+        display: flex;
+        font-weight: 400;
+        gap: 2rem;
       }
 
-      .cv ul li:not(:last-child) {
-        margin-bottom: 0.5rem;
-      }
-
-      .cv a {
+      .links a {
         color: inherit;
         text-decoration: none;
+        padding: 0.125rem 0.25rem;
+        border-radius: 0.25rem;
+        transition: background-color 0.1s;
       }
 
-      .cv a:hover {
-        text-decoration: underline;
+      .links a:hover,
+      .links a:focus {
+        background-color: #dbdad7;
       }
     </style>
   </head>
@@ -98,49 +90,10 @@
         <h1>Åke Amcoff</h1>
         <div class="ipa">[ˈoː.kɛ]</div>
       </hgroup>
-      <section class="cv">
-        <h3>Education</h3>
-        <ul>
-          <li>Södra Latins gymnasium (2021–2024)</li>
-          <li>Lunds Tekniska Högskola (2024–)</li>
-        </ul>
-        <h3>Career</h3>
-        <ul>
-          <li>
-            <a href="https://www.5monkeys.se/">5 Monkeys Agency</a> (2022–2024)
-          </li>
-          <li><a href="https://www.vaja.net/">Vaja</a> (2024–)</li>
-        </ul>
-        <h3>Languages</h3>
-        <ul>
-          <li>Swedish</li>
-          <li>English</li>
-          <li>German</li>
-        </ul>
-        <h3>Diplomas etc.</h3>
-        <ul>
-          <li>Driving license (class B, automatic only)</li>
-          <li>Deutsches Sprachdiplom I & II</li>
-          <li>
-            Bronze medal,
-            <a href="https://eoes.se/resultat/"
-              >European Olympiad of Experimental Science</a
-            >
-            (2022)
-          </li>
-          <li>
-            Bronze medal,
-            <a href="https://nbpho.ee/">Nordic–Baltic Physics Olympiad</a>
-            (2024)
-          </li>
-        </ul>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:ake@amcoff.net">ake@amcoff.net</a></li>
-          <li><a href="https://github.com/akeamc/">Github</a></li>
-          <li><a href="https://www.linkedin.com/in/%C3%A5ke/">Linkedin</a></li>
-        </ul>
-      </section>
+      <ul class="links">
+        <li><a href="https://github.com/akeamc/">Github</a></li>
+        <li><a href="/cv">CV</a></li>
+      </ul>
     </main>
   </body>
 </html>
